src/objects/CatalogoDocumentacion__c.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite identificar si el registro de catalogo esta activo o no. En caso que no este activo no sera visible al momento de realizar la tipificación de casos</description>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AprobadorDos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aprobador Dos</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Catalogo_DocumentacionDos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AprobadorUno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aprobador Uno</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Catalogo_Documentacion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aprobador__c</fullName>
        <label>Aprobador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClienteCandidato__c</fullName>
        <label>ClienteCandidato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente</fullName>
                </value>
                <value>
                    <fullName>Candidato</fullName>
                </value>
                <value>
                    <fullName>Ambos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorreoApertura__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correo Apertura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorreoCierre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correo Cierre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreaCasoCierre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crea caso al cierre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DatosTramite__c</fullName>
        <label>Datos del trámite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detalle__c</fullName>
        <label>Detalle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bancomer</fullName>
                </value>
                <value>
                    <fullName>Beneficiario preferente</fullName>
                </value>
                <value>
                    <fullName>Bolsa de trabajo</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Cambio cobertura</fullName>
                </value>
                <value>
                    <fullName>Cambio de forma de pago</fullName>
                </value>
                <value>
                    <fullName>Cambio de número de cuenta</fullName>
                </value>
                <value>
                    <fullName>Cambio de plan</fullName>
                </value>
                <value>
                    <fullName>Cambio subplan</fullName>
                </value>
                <value>
                    <fullName>Cargos irregulares</fullName>
                </value>
                <value>
                    <fullName>Cargos no reconocidos</fullName>
                </value>
                <value>
                    <fullName>Chat interrumpido por el cliente</fullName>
                </value>
                <value>
                    <fullName>Cliente no reconoce compra</fullName>
                </value>
                <value>
                    <fullName>Complemento de bonificación</fullName>
                </value>
                <value>
                    <fullName>Con cambio de cuenta</fullName>
                </value>
                <value>
                    <fullName>Condiciones Generales</fullName>
                </value>
                <value>
                    <fullName>Controversia solicitud</fullName>
                </value>
                <value>
                    <fullName>Corregir titular / contratante</fullName>
                </value>
                <value>
                    <fullName>Corte de llamada</fullName>
                </value>
                <value>
                    <fullName>Cotización adaptación/ equipo especial/conversión</fullName>
                </value>
                <value>
                    <fullName>Cuenta Asociada</fullName>
                </value>
                <value>
                    <fullName>Datos generales</fullName>
                </value>
                <value>
                    <fullName>De cotización</fullName>
                </value>
                <value>
                    <fullName>De cotización/Call me back</fullName>
                </value>
                <value>
                    <fullName>De medios de contacto</fullName>
                </value>
                <value>
                    <fullName>De otra aseguradora</fullName>
                </value>
                <value>
                    <fullName>De otras áreas</fullName>
                </value>
                <value>
                    <fullName>De productos y servicios</fullName>
                </value>
                <value>
                    <fullName>Derechos arco</fullName>
                </value>
                <value>
                    <fullName>Desacuerdo en solución</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dias__c</fullName>
        <label>Días</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural</fullName>
                </value>
                <value>
                    <fullName>Hábil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentacion__c</fullName>
        <label>Documentación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EjecutorID__c</fullName>
        <label>EjecutorID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ejecutor__c</fullName>
        <label>Ejecutor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cola BD</fullName>
                </value>
                <value>
                    <fullName>Cola BO2 Abonos</fullName>
                </value>
                <value>
                    <fullName>Cola BO3</fullName>
                </value>
                <value>
                    <fullName>Cola de Back Office 2</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cambios</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cancelaciones</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Integrador</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Recibos Fiscales</fullName>
                </value>
                <value>
                    <fullName>Cola de Casos Especiales</fullName>
                </value>
                <value>
                    <fullName>Cola de Coordinador AC</fullName>
                </value>
                <value>
                    <fullName>Cola de Cotizaciones</fullName>
                </value>
                <value>
                    <fullName>Cola de Email-to-case</fullName>
                </value>
                <value>
                    <fullName>Cola de Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Cola de Supervisor AC</fullName>
                </value>
                <value>
                    <fullName>Cola de Validación PU</fullName>
                </value>
                <value>
                    <fullName>Cola de Validación Siniestro</fullName>
                </value>
                <value>
                    <fullName>Cola Retención</fullName>
                </value>
                <value>
                    <fullName>Cola Traking Web</fullName>
                </value>
                <value>
                    <fullName>Cola de Verificación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdExterno__c</fullName>
        <externalId>true</externalId>
        <label>IdExterno</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aclaración</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Bonificaciones</fullName>
                </value>
                <value>
                    <fullName>Cambio de número de cuenta</fullName>
                </value>
                <value>
                    <fullName>Cambios</fullName>
                </value>
                <value>
                    <fullName>Cancelaciones</fullName>
                </value>
                <value>
                    <fullName>Consulta/Información</fullName>
                </value>
                <value>
                    <fullName>Cool Drive</fullName>
                </value>
                <value>
                    <fullName>Cotizaciones</fullName>
                </value>
                <value>
                    <fullName>Información</fullName>
                </value>
                <value>
                    <fullName>Interacción</fullName>
                </value>
                <value>
                    <fullName>Posible Retención</fullName>
                </value>
                <value>
                    <fullName>Promociones</fullName>
                </value>
                <value>
                    <fullName>Propuesta</fullName>
                </value>
                <value>
                    <fullName>Quejas</fullName>
                </value>
                <value>
                    <fullName>Retención</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Verificación Digital</fullName>
                </value>
                <value>
                    <fullName>Integración Documentos</fullName>
                </value>
                <value>
                    <fullName>Integración de Fotos Verificación</fullName>
                </value>
                <value>
                    <fullName>Consulta</fullName>
                    <isActive>false</isActive>
                    <label>Consulta</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOseguimiento__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Para los casos que deben cerrarse después de crearse</description>
        <label>NOseguimiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS__c</fullName>
        <label>NS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NivelUnoID__c</fullName>
        <label>NivelUnoID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NivelUno__c</fullName>
        <label>Nivel 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cola BD</fullName>
                </value>
                <value>
                    <fullName>Cola BO2 Abonos</fullName>
                </value>
                <value>
                    <fullName>Cola BO3</fullName>
                </value>
                <value>
                    <fullName>Cola Bonus</fullName>
                </value>
                <value>
                    <fullName>Cola de Back Office 2</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cambios</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cancelaciones</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Integrador</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Recibos Fiscales</fullName>
                </value>
                <value>
                    <fullName>Cola de Casos Especiales</fullName>
                </value>
                <value>
                    <fullName>Cola de Coordinador AC</fullName>
                </value>
                <value>
                    <fullName>Cola de Cotizaciones</fullName>
                </value>
                <value>
                    <fullName>Cola de Email-to-case</fullName>
                </value>
                <value>
                    <fullName>Cola de Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Cola de Supervisor AC</fullName>
                </value>
                <value>
                    <fullName>Cola de Validación PU</fullName>
                </value>
                <value>
                    <fullName>Cola de Validación Siniestro</fullName>
                </value>
                <value>
                    <fullName>Cola de Verificación</fullName>
                </value>
                <value>
                    <fullName>Cola Retención</fullName>
                </value>
                <value>
                    <fullName>Cola Traking Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasignadoID__c</fullName>
        <label>ReasignadoID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasignado__c</fullName>
        <label>Reasignado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asesor</fullName>
                </value>
                <value>
                    <fullName>Cola BD</fullName>
                </value>
                <value>
                    <fullName>Cola BO2 Abonos</fullName>
                </value>
                <value>
                    <fullName>Cola BO3</fullName>
                </value>
                <value>
                    <fullName>Cola de Back Office 2</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cambios en Cobertura y Descr</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cambios Grales y Cuenta</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Cancelaciones</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Integrador</fullName>
                </value>
                <value>
                    <fullName>Cola de BO2 Recibos Fiscales</fullName>
                </value>
                <value>
                    <fullName>Cola de Casos Especiales</fullName>
                </value>
                <value>
                    <fullName>Cola de Coordinador AC</fullName>
                </value>
                <value>
                    <fullName>Cola de Cotizaciones</fullName>
                </value>
                <value>
                    <fullName>Cola de Email-to-case</fullName>
                </value>
                <value>
                    <fullName>Cola de Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Cola de Supervisor AC</fullName>
                </value>
                <value>
                    <fullName>Cola de Validación PU</fullName>
                </value>
                <value>
                    <fullName>Cola de Verificación</fullName>
                </value>
                <value>
                    <fullName>Cola Renovación</fullName>
                </value>
                <value>
                    <fullName>Cola Retención</fullName>
                </value>
                <value>
                    <fullName>Cola Traking Web</fullName>
                </value>
                <value>
                    <fullName>SOS Queue</fullName>
                </value>
                <value>
                    <fullName>Sistema</fullName>
                </value>
                <value>
                    <fullName>AsesorCotizaciones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequiereAprobacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Aprobación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiereDocumentacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Documentación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequierePiscaProteccion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Pisca y Protección</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiereRevisionBO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere revisión de BO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiereValTel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Validación Telefónica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiereValidacionPU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Validación PU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiereValidacionSiniestro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Validación de Siniestro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revisor__c</fullName>
        <label>Revisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BO2</fullName>
                </value>
                <value>
                    <fullName>BO2Cambios1</fullName>
                </value>
                <value>
                    <fullName>BO2Cambios2</fullName>
                </value>
                <value>
                    <fullName>BO2Cancelaciones</fullName>
                </value>
                <value>
                    <fullName>BO2Recibos</fullName>
                </value>
                <value>
                    <fullName>BO2casosEspeciales</fullName>
                </value>
                <value>
                    <fullName>BO3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdetalle__c</fullName>
        <label>Subdetalle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aceptación en Uber</fullName>
                </value>
                <value>
                    <fullName>Ajustador</fullName>
                </value>
                <value>
                    <fullName>Amplio</fullName>
                </value>
                <value>
                    <fullName>Amplio Plus</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
                <value>
                    <fullName>Bancomer</fullName>
                </value>
                <value>
                    <fullName>Básico</fullName>
                </value>
                <value>
                    <fullName>Cambiar a pago Mensual</fullName>
                </value>
                <value>
                    <fullName>Cambio a flotilla o grupo</fullName>
                </value>
                <value>
                    <fullName>Cambio de Producto</fullName>
                </value>
                <value>
                    <fullName>Cambio de Titular</fullName>
                </value>
                <value>
                    <fullName>Cancelación Chofer privado</fullName>
                </value>
                <value>
                    <fullName>Cargo cuenta alterna</fullName>
                </value>
                <value>
                    <fullName>Cargos duplicados</fullName>
                </value>
                <value>
                    <fullName>Cargos irregulares</fullName>
                </value>
                <value>
                    <fullName>Cliente no contesta</fullName>
                </value>
                <value>
                    <fullName>Cobertura Chofer Privado a Particular</fullName>
                </value>
                <value>
                    <fullName>Cobertura Particular a Chofer Privado</fullName>
                </value>
                <value>
                    <fullName>Coberturas incorrectas</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Como se inscribe a Cool Drive</fullName>
                </value>
                <value>
                    <fullName>Compra mayor a 3 meses</fullName>
                </value>
                <value>
                    <fullName>Compra menor a 3 meses</fullName>
                </value>
                <value>
                    <fullName>Corralón</fullName>
                </value>
                <value>
                    <fullName>Corregir</fullName>
                </value>
                <value>
                    <fullName>Cuenta no cobrable</fullName>
                </value>
                <value>
                    <fullName>Datos incorrectos</fullName>
                </value>
                <value>
                    <fullName>Demora en asistencia</fullName>
                </value>
                <value>
                    <fullName>Demora en trámite</fullName>
                </value>
                <value>
                    <fullName>Descripción incorrecta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipificacionCierre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipificación al Cierre</label>
        <referenceTo>CatalogoDocumentacion__c</referenceTo>
        <relationshipLabel>Catálogo Documentación</relationshipLabel>
        <relationshipName>Cat_logo_Documentaci_n</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Catálogo Documentación</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activo__c</columns>
        <columns>Dias__c</columns>
        <columns>NS__c</columns>
        <columns>RequiereValidacionSiniestro__c</columns>
        <columns>RequiereDocumentacion__c</columns>
        <columns>Ejecutor__c</columns>
        <columns>EjecutorID__c</columns>
        <columns>Aprobador__c</columns>
        <columns>AprobadorDos__c</columns>
        <columns>AprobadorUno__c</columns>
        <columns>ClienteCandidato__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre del Motivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catálogo Documentación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Crear_caso_cierre_requiere_Tipificacion</fullName>
        <active>true</active>
        <description>Cuando se selecciona CrearCasoCierre = true, se requiere la TipificacionCierre</description>
        <errorConditionFormula>IF(
  CreaCasoCierre__c ,  
  IF(ISBLANK(TipificacionCierre__c) , true, false),
  false
)</errorConditionFormula>
        <errorDisplayField>TipificacionCierre__c</errorDisplayField>
        <errorMessage>La Tipificación al Cierre es requerida</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaIdExterno</fullName>
        <active>false</active>
        <description>Valida que el registro del catálogo tenga un Id Externo</description>
        <errorConditionFormula>ISBLANK (IdExterno__c)</errorConditionFormula>
        <errorMessage>Debe ingresar la información del campo Id Externo</errorMessage>
    </validationRules>
</CustomObject>